--- a/server/app/views/signedupcongrats.scala.html
+++ b/server/app/views/signedupcongrats.scala.html
@@ -1,10 +1,63 @@
+<!DOCTYPE html>
 <html>
     <head>
-        <title>Time To Teach</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/signup.css")">
+        <title>Time To Teach Login</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <meta name="google-signin-scope" content="profile email">
+        <meta name="google-signin-client_id"
+        content="19438371353-1gljfancidnfrtjdt2ic22hd3ib4fab0.apps.googleusercontent.com">
+        <script type="text/javascript" src="https://apis.google.com/js/platform.js" async defer></script>
         <script type="text/javascript" src="@routes.Assets.versioned("javascripts/utils.js")"></script>
+        <script type="text/javascript" src="@routes.Assets.versioned("javascripts/signin.js")"></script>
+        <script type="text/javascript" src="@routes.Assets.versioned("javascripts/signout.js")"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
     </head>
     <body>
+
+        <div class="d-none g-signin2" ></div>
+        <div id="mainAppTopMargin"></div>
+
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#startupNavbar" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand" href="#">
+                <img src="@routes.Assets.versioned("icons/SudoStream_icon.png")" alt="logo" height="26">
+                <span class="display-5">Time To Teach</span>
+            </a>
+
+            <div class="collapse navbar-collapse" id="startupNavbar">
+                <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/#feature-one">Features</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/#pricing">Pricing</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/#news">News</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#">Blog</a>
+                    </li>
+                    <li class="nav-item nav-login-button">
+                        <a class="btn btn-outline-primary" href="#" onclick="signOut();">Sign out</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
 
         <h2>Congratulations</h2>
         <h3>You have signed up to Time To Teach</h3>
@@ -13,6 +66,53 @@
             window.setTimeout(goToApp, 1000);
         </script>
 
-    </body>
+        <footer id="main-footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                                &copy; 2017 Startup.logo is not a real thing. If it is, this site was not meant
+                            to be a mockery of it
+                        <br>
+                        Coded by <a href="http://andyboyle.io">Andy</a>
+                    </div>
+                    <div class="col-md-2">
+                        <h6>Our product</h6>
+                        <ul class="list-unstyled">
+                            <li><a href="">Features</a></li>
+                            <li><a href="">Solutions</a></li>
+                            <li><a href="">Plans</a></li>
+                            <li><a href="">Sign in</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-2">
+                        <h6>Our team</h6>
+                        <ul class="list-unstyled">
+                            <li><a href="">About</a></li>
+                            <li><a href="">Highlights</a></li>
+                            <li><a href="">Investors</a></li>
+                            <li><a href="">Partners</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-2">
+                        <h6>Other things</h6>
+                        <ul class="list-unstyled">
+                            <li><a href="">Jobs</a></li>
+                            <li><a href="">Contact</a></li>
+                            <li><a href="">FAQ</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
 
+
+        @* ========================================================================================================*@
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
+        integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
+        integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+        @scalajs.html.scripts("client", routes.Assets.versioned(_).toString, name => getClass.getResource(s"/public/$name") != null)
+
+    </body>
 </html>
