--- a/server/app/views/signupNew.scala.html
+++ b/server/app/views/signupNew.scala.html
@@ -119,7 +119,7 @@
                                             </div>
                                         </div>
                                         <table id="schoolTable" class="table table-hover d-none">
-                                            <tr class="header">
+                                            <tr class="header d-none">
                                                 <th style="width: 30%;">School Name</th>
                                                 <th style="width: 30%;">Address</th>
                                                 <th style="width: 15%;">Local Authority</th>
