--- a/server/app/views/timetoteachAppMain.scala.html
+++ b/server/app/views/timetoteachAppMain.scala.html
@@ -20,10 +20,8 @@
     </head>
     <body>
         <div class="d-none g-signin2" ></div>
-        <div id="mainAppTopMargin"></div>
 
-
-        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <nav id="appMainNavbar" class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <button class="navbar-toggler" type="button" data-toggle="collapse"
             data-target="#startupNavbar" aria-controls="navbarTogglerDemo03"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -55,17 +53,21 @@
                         <a class="nav-link disabled" href="#">Blog</a>
                     </li>
                     <li class="nav-item nav-login-button">
-                        @if(userFirstName.isDefined) {
-                            <a class="btn btn-outline-primary" href="#" onclick="signOut();">Sign out</a>
-                        }else {
-                            <a class="btn btn-outline-primary" href="@routes.Application.login()">Log in</a>
-                        }
+                    @if(userFirstName.isDefined) {
+                        <a class="btn btn-outline-primary" href="#" onclick="signOut();">Sign out</a>
+                    } else {
+                        <a class="btn btn-outline-primary" href="@routes.Application.login()">Log in</a>
+                    }
                     </li>
                 </ul>
             </div>
         </nav>
 
-        @content
+        <div id="appBackground">
+            <div id="mainAppTopMargin"></div>
+            @content
+        </div>
+
 
         <footer id="main-footer">
             <div class="container">
@@ -105,9 +107,7 @@
                 </div>
             </div>
         </footer>
-
         @* ========================================================================================================*@
-
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
         integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
