--- a/server/app/views/timetoteachDashboard.scala.html
+++ b/server/app/views/timetoteachDashboard.scala.html
@@ -1,7 +1,33 @@
 @import be.objectify.deadbolt.scala.AuthenticatedRequest
 @(handler: be.objectify.deadbolt.scala.DeadboltHandler, title: String, userPictureUri: Option[String], userFirstName: Option[String])(implicit request: AuthenticatedRequest[Any])
 
-@timetoteachAppMain(handler, title, userPictureUri, userFirstName) {
-    <h1>YES</h1>
-    <h2>Howdy doodly doo .. fun times are here!</h2>
-}
+    @timetoteachAppMain(handler, title, userPictureUri, userFirstName) {
+
+        <h3 class="header-highlight display-3 text-center">Dashboard</h3>
+
+        <section id="dashboardContent">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-5">
+                        <h3 class="display-5 text-center">Planning</h3>
+                    </div>
+                    <div class="col-lg-2">
+                    </div>
+                    <div class="col-lg-5">
+                        <h3 class="display-5 text-center">Resources</h3>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-5">
+                        <h3 class="display-5 text-center">Communication</h3>
+                    </div>
+                    <div class="col-lg-2">
+                    </div>
+                    <div class="col-lg-5">
+                        <h3 class="display-5 text-center">Admin & Reports</h3>
+                    </div>
+                </div>
+            </div>
+        </section>
+    }
