--- a/server/app/views/timetoteachDashboard.scala.html
+++ b/server/app/views/timetoteachDashboard.scala.html
@@ -8,23 +8,25 @@
         <section id="dashboardContent">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-5">
+                    <div class="col-lg-5 dashboardFadedBackground">
                         <h3 class="display-5 text-center">Planning</h3>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-1">
                     </div>
-                    <div class="col-lg-5">
+                    <div class="col-lg-5 dashboardFadedBackground">
                         <h3 class="display-5 text-center">Resources</h3>
                     </div>
                 </div>
 
+                <div class="row"><br></div>
+
                 <div class="row">
-                    <div class="col-lg-5">
+                    <div class="col-lg-5 dashboardFadedBackground">
                         <h3 class="display-5 text-center">Communication</h3>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-1">
                     </div>
-                    <div class="col-lg-5">
+                    <div class="col-lg-5 dashboardFadedBackground">
                         <h3 class="display-5 text-center">Admin & Reports</h3>
                     </div>
                 </div>
