--- a/server/public/stylesheets/main.css
+++ b/server/public/stylesheets/main.css
@@ -24,7 +24,11 @@ h6 {
 }
 
 #dashboardContent {
-    margin-top: 2rem;
+    margin-top: 1.5rem;
+}
+
+#dashboardContent h3 {
+    margin-top: 1rem;
 }
 
 img {
@@ -229,6 +233,13 @@ img {
 
 #selectedSchoolDiv {
     margin-top: 30px;
+}
+
+.dashboardFadedBackground {
+    min-height: 22rem;
+    margin: 0 auto;
+    background: rgba(0, 0, 0, 0.10);
+    border-radius: 5%;
 }
 
 @media screen and ( min-width: 991px) {
