beginings of class timetable

--- a/server/public/stylesheets/main.css
+++ b/server/public/stylesheets/main.css
@@ -27,6 +27,10 @@ h6 {
     margin-top: 1.5rem;
 }
 
+#class-timetable-section {
+    margin-top: 8rem;
+}
+
 #dashboardContent h3 {
     color: white;
     margin-top: 1rem;
