--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -1,44 +1,46 @@
 @import be.objectify.deadbolt.scala.AuthenticatedRequest
-@(handler: be.objectify.deadbolt.scala.DeadboltHandler, message: String, userPictureUri: Option[String], userFirstName: Option[String])(implicit request: AuthenticatedRequest[Any])
+@(handler: be.objectify.deadbolt.scala.DeadboltHandler, title: String, userPictureUri: Option[String], userFirstName: Option[String])(implicit request: AuthenticatedRequest[Any])
 
-@main("Time To Teach App", userPictureUri, userFirstName) {
+@timetoteachAppMain(handler, title, userPictureUri, userFirstName) {
 
-    <h2>Class Timetable</h2>
+    <h3 class="header-highlight display-4 text-center">Class Timetable</h3>
 
-    <div class="container">
-        <div class="row bg-primary text-light">
-            <div class="col-md-1"></div>
-            <div class="col-md-3 ">Early Morning</div>
-            <div class="col-md-1">Break</div>
-            <div class="col-md-3 ">Late Morning</div>
-            <div class="col-md-1">Lunch</div>
-            <div class="col-md-3 order">Afternoon</div>
-        </div>
-        <div class="row">
-            <div class="col-md-1 bg-primary text-light" >Tuesday</div>
-            <div class="col-md-3 ">
-                <div class="row">
-                    <div class="col-6 rounded subject-maths">Maths
-                        <button type="button" class="close" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
+    <section id="class-timetable-section">
+        <div class="container">
+            <div class="row bg-primary text-light">
+                <div class="col-md-1"></div>
+                <div class="col-md-3 ">Early Morning</div>
+                <div class="col-md-1">Break</div>
+                <div class="col-md-3 ">Late Morning</div>
+                <div class="col-md-1">Lunch</div>
+                <div class="col-md-3 order">Afternoon</div>
+            </div>
+            <div class="row">
+                <div class="col-md-1 bg-primary text-light" >Tuesday</div>
+                <div class="col-md-3 ">
+                    <div class="row">
+                        <div class="col-6 rounded subject-maths">Maths
+                            <button type="button" class="close" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="col-6 rounded subject-physical-education">P.E.</div>
                     </div>
-                    <div class="col-6 rounded subject-physical-education">P.E.</div>
                 </div>
-            </div>
-            <div class="col-md-1"></div>
-            <div class="col-md-3">
-                <div class="row">
-                    <div class="col-8 rounded subject-writing">Writing</div>
-                    <div class="col-4 rounded subject-music">Music</div>
+                <div class="col-md-1"></div>
+                <div class="col-md-3">
+                    <div class="row">
+                        <div class="col-8 rounded subject-writing">Writing</div>
+                        <div class="col-4 rounded subject-music">Music</div>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-1"></div>
-            <div class="col-md-3">
-                <div class="row">
-                    <div class="col-12 rounded subject-topic">Topic</div>
+                <div class="col-md-1"></div>
+                <div class="col-md-3">
+                    <div class="row">
+                        <div class="col-12 rounded subject-topic">Topic</div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 }
