--- a/server/app/views/timetoteachDashboard.scala.html
+++ b/server/app/views/timetoteachDashboard.scala.html
@@ -10,7 +10,8 @@
                 <div class="row">
                     <div class="col-lg-5 dashboardFadedBackground">
                         <h3 class="display-5 text-center">Planning</h3>
-                        <button type="button" class="btn btn-primary btn-lg dashboard-button">Class Timetable</button>
+                        <a class="btn btn-primary btn-lg dashboard-button" href="@routes.Application.classTimetable()" role="button">
+                            Class Timetable</a>
                         <button type="button" class="btn btn-primary btn-lg dashboard-button">Termly Plans</button>
                         <button type="button" class="btn btn-primary btn-lg dashboard-button">Weekly Plan</button>
                     </div>
